2009-03-29  Hans Breuer  <hans@breuer.org>

	* app/display.h : increased the arbitrary zoom limits to make my 
	current stress test diagram fit

	* plug-ins/python/wdeps.py : my dependency analysis script is finally 
	running on Linux and together with dot can produce pretty nice images
	(last change was the introduction of tinting by layer)
	* samples/Self/dia-linux-2.dia : dependency graph of Dia
	* samples/Self/dia-linux-2.dot : dot file produced by wdeps.py and
	preocessed by dot

2009-03-28  Hans Breuer  <hans@breuer.org>

	* plug-ins/cairo/diacairo-renderer.c : apparently I've found a 
	workaround for pango bug #341481. Or maybe bug #573261 always we mine.

	* lib/prop_text.c : for 'multistring' connect to the 'change' signal
	of the TextBuffer rather than to the unreliable 'insert-at-cursor' of
	the TextView -> "Chronogram - line" works again, bug #576905
	* lib/propinternals.h  lib/prop_attr.c lib/prop_geomtypes.c 
	  lib/prop_inttypes.c lib/prop_text.c lib/prop_widgets.c 
	  lib/propdialogs.c : make prophandler_connect() take a GObject* to
	do the above without warnings

2009-03-27  Hans Breuer  <hans@breuer.org>

	* plug-ins/python/dot2dia.py plug-ins/python/Makefile.am : initial 
	version of dot (http://www.graphviz.org) import for Dia

2009-03-26  Hans Breuer  <hans@breuer.org>

	* plug-ins/python/pydia-property.c : check for a correct number of
	bezier points before assigning them. So evem a broken PyDia script
	can not crash the core (this way)

2009-03-25  Hans Breuer  <hans@breuer.org>

	* plug-ins/diapsrenderer.c : dont't throw away alignment information
	an don't scale text arbitrary, we can't predict the Latin-1 font size
	exactly enough. Fiyes bug #575186.
	* lib/textline.[ch] : more const correct, avoids warning above

2009-03-24  Hans Breuer  <hans@breuer.org>

	* plug-ins/python/diastddia.py : almost finished, a bug left in Arc's 
	curve_distance calculation. Implemented the insane load/save property